@@ -113,12 +113,14 @@ If NOLOCAL is non-nil, don't add the post to the local list."
                 (delicious-read-time-string)))
   (message "Waiting for server.")
   (delicious-api-post url description tags extended time)
-  (let ((post (list
-               (cons "href" url)
-               (cons "description" description)
-               (cons "tag" tags)
-               (cons "extended" extended)
-               (cons "time" time))))
+  (let* ((hash (md5 url))
+         (post (list
+                (cons "href" url)
+                (cons "description" description)
+                (cons "hash" hash)
+                (cons "tag" tags)
+                (cons "extended" extended)
+                (cons "time" time))))
     (unless nolocal (delicious-post-local post))
     (message "URL posted.")))
 
@@ -910,11 +912,13 @@ Returns the updated post."
     (save-excursion
       (find-file delicious-cache-file)
       (goto-char (point-max))
-      (let ((post (list (cons "href" url)
-                        (cons "description" description)
-                        (cons "tag" (or tags nil))
-                        (cons "extended" (or extended nil))
-                        (cons "time" (or time nil)))))
+      (let* ((hash (md5 url))
+             (post (list (cons "href" url)
+                         (cons "description" description)
+                         (cons "hash" hash)
+                         (cons "tag" (or tags nil))
+                         (cons "extended" (or extended nil))
+                         (cons "time" (or time nil)))))
         (prin1 post (current-buffer)))
       (delicious-save-buffer)))
   (if (y-or-n-p "Post another bookmark? ")
